syntax="proto3";

package auth;
option go_package="auth/authPb";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

// For invalidating refresh tokens
message LogoutRequest {
  string refresh_token = 2;
}

message LogoutResponse {
  bool success = 1;
}

message RegisterRequest {
  string username = 1; // moodle id
  // Password should be generated by the server
  string first_name = 2;
  string last_name = 3;
  string middle_name = 4;
  string email = 5;
  string phone = 6;
  string mobile = 7;
  string role = 8;
}

message RegisterResponse {
  string password = 2;
  bool success = 1;
}


service AuthService {
  // Unary RPC
  rpc Register(RegisterRequest) returns (RegisterResponse) {};
  rpc Login(LoginRequest) returns (LoginResponse) {};
  rpc Logout(LogoutRequest) returns (LogoutResponse) {};
}